body_filter_by_lua_file 处理

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -49,7 +49,7 @@ http {
         charset utf-8;
         error_log logs/api-gateway-error.log;
         set $validateContent '';
-        
+        set $resp_body "";
         location ~ (favicon.ico) {
         	log_not_found off;
         	access_log   off;
@@ -59,24 +59,32 @@ http {
         root   /Users/mind/development/code/Openresty/Github/simple-api-gateway/html;
 
         # access_by_lua_file lua/init.lua;
-
-        #首页
-        location = /show {
-            content_by_lua_file lua/show.lua;
-        }
-        
         # 拦截内容和换成内容输出
         location @content {
             content_by_lua_file lua/content.lua;
         }
 
-        location / {
-            access_by_lua_file lua/index.lua;
-            proxy_pass  http://www.oschina.net;
-            #proxy_redirect     off;
-            #proxy_set_header   Host             $host;
-            #proxy_set_header   X-Real-IP        $remote_addr;
-            #proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+
+        # location /access {
+        #     access_by_lua_file lua/index.lua;
+        #     autoindex on;
+        #     proxy_pass  http://www.oschina.net;
+        #     #proxy_redirect     off;
+        #     #proxy_set_header   Host             $host;
+        #     #proxy_set_header   X-Real-IP        $remote_addr;
+        #     #proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+        # }
+        
+        lua_need_request_body on;
+        location /body_filter {
+
+          echo "hello world";
+          echo "my name is wang";
+
+          header_filter_by_lua_block {
+              ngx.header.content_length = nil;
+          }
+          body_filter_by_lua_file lua/body.lua;
         }
     }
 
